--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,8 +7,7 @@ on:
     paths:
       - terraform/**
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
     paths:
       - terraform/**
 
